--- a/appveyor.yml
+++ b/appveyor.yml
@@ -63,28 +63,6 @@ install:
   - ps: |
       if ($true)
       {
-        appveyor DownloadFile `
-          https://github.com/wxWidgets/wxWidgets/releases/download/v3.0.4/wxWidgets-3.0.4.7z
-        7z x wxWidgets-3.0.4.7z -y -o"wxWidgets-3.0.4"
-        cd c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw
-        mingw32-make SHELL=cmd -f makefile.gcc setup_h BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1 > $env:BLDDIR/makewx.out
-        echo "$env:WX_TOP mingw32-make (1) finished" >>  $env:BLDDIR/makewx.out
-        echo "$env:WX_TOP mingw32-make (1) finished" 
-        mingw32-make SHELL=cmd -f makefile.gcc -j4 BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1 >> $env:BLDDIR/makewx.out
-        echo "$env:WX_TOP mingw32-make (2) finished" >>  $env:BLDDIR/makewx.out
-        echo "$env:WX_TOP mingw32-make (2) finished" 
-        # Below 2 lines are required for wxWidgets-3.0.4, don't know why
-        copy c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw\gcc_mswudll\coredll_headerctrlg.o c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw\gcc_mswudll\coredll_headerctrlgo
-        mingw32-make SHELL=cmd -f makefile.gcc -j4 BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1
-        # for mingw usage we need to define wxWidgets_ROOT_DIR
-        #
-        $env:wxWidgets_ROOT_DIR=$env:WX_TOP
-        }
-      # The above builds ok but does not link with plplot build.
-      # WX_TOP can be used for wx in a mingw build of GDL.
-  - ps: |
-      if ($true)
-      {
         # BSD-XDR
         cd c:\projects\gdl\win32libs
         appveyor DownloadFile `
@@ -103,6 +81,25 @@ install:
   - ps: |
       if ($false)
       {
+        # wxWidgets
+        appveyor DownloadFile `
+          https://github.com/wxWidgets/wxWidgets/releases/download/v3.0.4/wxWidgets-3.0.4.7z
+        7z x wxWidgets-3.0.4.7z -y -o"wxWidgets-3.0.4"
+        cd c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw
+        mingw32-make SHELL=cmd -f makefile.gcc setup_h BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1 > $env:BLDDIR/makewx.out
+        echo "$env:WX_TOP mingw32-make (1) finished" >>  $env:BLDDIR/makewx.out
+        echo "$env:WX_TOP mingw32-make (1) finished" 
+        mingw32-make SHELL=cmd -f makefile.gcc -j4 BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1 >> $env:BLDDIR/makewx.out
+        echo "$env:WX_TOP mingw32-make (2) finished" >>  $env:BLDDIR/makewx.out
+        echo "$env:WX_TOP mingw32-make (2) finished" 
+        # Below 2 lines are required for wxWidgets-3.0.4, don't know why
+        copy c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw\gcc_mswudll\coredll_headerctrlg.o c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw\gcc_mswudll\coredll_headerctrlgo
+        mingw32-make SHELL=cmd -f makefile.gcc -j4 BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1
+        # for mingw usage we need to define wxWidgets_ROOT_DIR
+        #
+        $env:wxWidgets_ROOT_DIR=$env:WX_TOP
+        # The above builds ok but does not link with plplot build.
+
         # PLplot
         cd c:\projects\gdl\win32libs
         appveyor DownloadFile `
@@ -117,11 +114,12 @@ install:
         # plplot failed to bring in the wxwidgets build because the version is not recognized in the
         # cmake module findwxwidgets.cmake (customized in plplot)
         #
-        # Patch to cmake/modules/FindwxWidgets.cmake:
-        #
-        # Findwx.cmake.patch:
+        # Patch to cmake/modules/FindwxWidgets.cmake: scripts/patch/Findwx.cmake.patch:
         #
         c:\msys64\usr\bin\bash.exe -lc 'cd /c/projects/gdl/win32libs && . /c/projects/gdl/scripts/patch/patch_plplot.sh'
+        echo "mingw build of plplot is done via dos commands scripts/appveyor_plplot.bat"
+        #
+        # (to do that, activate the line below the next block.)
         }
       else 
       {
@@ -318,7 +316,7 @@ build_script:
         copy C:\mingw-w64\$env:GCC\$env:mname\bin\*.dll c:\projects\gdl\install\gdl\bin
         copy $env:PLPLOTDIR/lib/plplot5.13.0/drivers/*.dll c:/projects/gdl/install/gdl/bin -ErrorAction silentlycontinue
         copy -r $env:PLPLOTDIR/lib/plplot5.13.0 c:/projects/gdl/install/plplot5.13
-        copy -r $env:PLPLOTDIR/share/plplot5.13.0 c:/projects/gdl/install/plplot5.13/lib
+        copy -r $env:PLPLOTDIR/share/plplot5.13.0 c:/projects/gdl/install/plplot5.13/lib -ErrorAction silentlycontinue
         }
   - set PATH=%PATH%;C:\projects\gdl\install\gdl\bin
   - set PLPLOT_DRV_DIR=%PLPLOTDIR%/lib/plplot5.13.0/drivers
