--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ matrix:
 #    - os: linux
 #      env: COMPILER=icc   CMAKE_BUILD_TYPE=Release  DEPS=MINI
     - os: linux
-      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Release  DEPS=MINI  ANTLR=yes
+      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Release  DEPS=MINI
     - os: osx
       env: COMPILER=clang CMAKE_BUILD_TYPE=Release  DEPS=MINI
 
@@ -32,6 +32,32 @@ matrix:
       env: COMPILER=clang CMAKE_BUILD_TYPE=Release  DEPS=FULL
 
 before_install:
+    # TEMPORARILY disabling tests that did not work at "day zero" (i.e. SF -> github migration)
+    - if [ $TRAVIS_OS_NAME == osx ]; then export SEDCMD="sed -i ''"; fi 
+    - if [ $TRAVIS_OS_NAME == linux ]; then export SEDCMD="sed -i"; fi 
+    - $SEDCMD '/test_bytscl.pro/d'           testsuite/Makefile.am # TODO!
+    - $SEDCMD '/test_dicom.pro/d'            testsuite/Makefile.am # TODO!
+    - $SEDCMD '/test_container.pro/d'        testsuite/Makefile.am # TODO! not ready
+    - $SEDCMD '/test_fft_leak.pro/d'         testsuite/Makefile.am # TODO!
+    - $SEDCMD '/test_file_delete.pro/d'      testsuite/Makefile.am # TODO!
+    - $SEDCMD '/test_file_search.pro/d'      testsuite/Makefile.am # TODO!
+    - $SEDCMD '/test_file_test.pro/d'        testsuite/Makefile.am # TODO! 2 errors on Dangling 
+    - $SEDCMD '/test_fix.pro/d'              testsuite/Makefile.am # TODO!
+    - $SEDCMD '/test_formats.pro/d'          testsuite/Makefile.am # TODO!
+    - $SEDCMD '/test_image_statistics.pro/d' testsuite/Makefile.am # TODO!
+    - $SEDCMD '/test_make_dll.pro/d'         testsuite/Makefile.am # TODO!
+    - $SEDCMD '/test_n_tags.pro/d'           testsuite/Makefile.am # TODO!
+    - $SEDCMD '/test_obj_isa.pro/d'          testsuite/Makefile.am # TODO!
+    - $SEDCMD '/test_obj_new.pro/d'          testsuite/Makefile.am # TODO!
+    - $SEDCMD '/test_plot_ranges.pro/d'      testsuite/Makefile.am # TODO!
+    - $SEDCMD '/test_resolve_routine.pro/d'  testsuite/Makefile.am # TODO!
+    - $SEDCMD '/test_rounding.pro/d'         testsuite/Makefile.am # TODO!
+    - $SEDCMD '/test_simplex.pro/d'          testsuite/Makefile.am # TODO!
+    - $SEDCMD '/test_step.pro/d'             testsuite/Makefile.am # TODO!
+    - if [ $TRAVIS_OS_NAME == osx ]; then $SEDCMD '/test_tic_toc.pro/d' testsuite/Makefile.am; fi # TODO! fails on OSX, e.g.    https://travis-ci.org/gnudatalanguage/gdl/jobs/440977990
+    - $SEDCMD '/test_typename.pro/d'         testsuite/Makefile.am # TODO!
+    - $SEDCMD '/test_wait.pro/d'             testsuite/Makefile.am # TODO!
+
     # https://github.com/travis-ci/travis-ci/issues/8613
     - if [[ $TRAVIS_OS_NAME == 'linux' && $CXX == 'clang++' ]]; then export LD_LIBRARY_PATH=/usr/local/clang/lib:$LD_LIBRARY_PATH; fi
 
@@ -63,9 +89,6 @@ install:
     - if [ -v CODECOV ]; then tac $TMPFILE > src/CMakeLists.txt; fi
     - if [ -v CODECOV ]; then rm $TMPFILE; fi
     - if [ -v CODECOV ]; then echo "SETUP_TARGET_FOR_COVERAGE_LCOV(NAME codecov EXECUTABLE \${CMAKE_BUILD_TOOL} check)" >> testsuite/CMakeLists.txt; fi
-
-    # antlr
-    - if [ -v ANTLR ]; then export APT_PACKAGES="${APT_PACKAGES} antlr"; fi
 
     # pytest
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then export APT_PACKAGES="${APT_PACKAGES} python-pytest"; fi
@@ -245,40 +268,6 @@ install:
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install $BREW_PACKAGES; fi
 
 script:
-    # antlr
-    - if [ -v ANTLR ]; then cd src; fi
-    - if [ -v ANTLR ]; then for i in *.g; do runantlr $i; done; fi;
-    - if [ -v ANTLR ]; then git diff -G '(^[ANTLR 2.7.7 (])' | tee diff.log; fi
-    - if [ -v ANTLR -a `cat diff.log | wc -l` -gt 0 ]; then travis_terminate 1; fi;
-    - if [ -v ANTLR ]; then cd ..; fi
-
-    # TEMPORARILY disabling tests some tests
-    - if [ $TRAVIS_OS_NAME == osx ]; then export SEDCMD="sed -i ''"; fi 
-    - if [ $TRAVIS_OS_NAME == linux ]; then export SEDCMD="sed -i"; fi 
-    - $SEDCMD '/test_bytscl.pro/d'           testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_dicom.pro/d'            testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_container.pro/d'        testsuite/Makefile.am # TODO! not ready
-    - $SEDCMD '/test_fft_leak.pro/d'         testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_file_delete.pro/d'      testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_file_search.pro/d'      testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_file_test.pro/d'        testsuite/Makefile.am # TODO! 2 errors on Dangling 
-    - $SEDCMD '/test_fix.pro/d'              testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_formats.pro/d'          testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_image_statistics.pro/d' testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_make_dll.pro/d'         testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_n_tags.pro/d'           testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_obj_isa.pro/d'          testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_obj_new.pro/d'          testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_plot_ranges.pro/d'      testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_resolve_routine.pro/d'  testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_rounding.pro/d'         testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_simplex.pro/d'          testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_step.pro/d'             testsuite/Makefile.am # TODO!
-    - if [ $TRAVIS_OS_NAME == osx ]; then $SEDCMD '/test_tic_toc.pro/d' testsuite/Makefile.am; fi # TODO! fails on OSX, e.g.    https://travis-ci.org/gnudatalanguage/gdl/jobs/440977990
-    - $SEDCMD '/test_typename.pro/d'         testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_wait.pro/d'             testsuite/Makefile.am # TODO!
-
-    # the standalone build
     - mkdir build
     - cd build
     - cmake $CMAKE_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} ../
@@ -286,7 +275,6 @@ script:
     - if [ -v CODECOV ]; then make codecov; else make check; fi
     - sudo make install
 
-    # the Python module build
     - cmake $CMAKE_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DPYTHON_MODULE=ON ../ 
     - travis_wait 60 make -j 2 # travis_wait needed for icc
     - PYTHONPATH=$PYTHONPATH:`find . -name GDL.so | xargs dirname` python -m pytest ../testsuite/python/test-GDL.py 
