--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -181,7 +181,6 @@ TESTS = \
   test_python_module_0.pro \
   test_python_module_1.pro \
   test_python_module_2.pro \
-  test_qhull.pro \
   test_qromb.pro \
   test_qromo.pro \
   test_random.pro \
@@ -214,6 +213,7 @@ TESTS = \
   test_tic_toc.pro \
   test_tiff.pro \
   test_total.pro \
+  test_triangulate.pro \
   test_trisol.pro \
   test_tv.pro \
   test_typename.pro \
