--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,8 @@ matrix:
 
     - os: linux
       env: COMPILER=gcc   CMAKE_BUILD_TYPE=Release  DEPS=FULL
-    - os: linux
-      env: COMPILER=icc   CMAKE_BUILD_TYPE=Release  DEPS=FULL
+#    - os: linux
+#      env: COMPILER=icc   CMAKE_BUILD_TYPE=Release  DEPS=FULL
     - os: osx
       env: COMPILER=clang CMAKE_BUILD_TYPE=Release  DEPS=FULL
 
