--- a/.travis.yml
+++ b/.travis.yml
@@ -5,31 +5,31 @@ matrix:
   include:
 #    - os: linux
 #      env: COMPILER=icc   CMAKE_BUILD_TYPE=Debug    DEPS=MINI
-    - os: linux
-      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Debug    DEPS=MINI
-    - os: osx
-      env: COMPILER=clang CMAKE_BUILD_TYPE=Debug    DEPS=MINI
+#    - os: linux
+#      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Debug    DEPS=MINI
+#    - os: osx
+#      env: COMPILER=clang CMAKE_BUILD_TYPE=Debug    DEPS=MINI
 
-    - os: linux
-      env: COMPILER=icc   CMAKE_BUILD_TYPE=Debug    DEPS=FULL
-    - os: linux
-      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Debug    DEPS=FULL  CODECOV=yes
-    - os: osx
-      env: COMPILER=clang CMAKE_BUILD_TYPE=Debug    DEPS=FULL
+#    - os: linux
+#      env: COMPILER=icc   CMAKE_BUILD_TYPE=Debug    DEPS=FULL
+#    - os: linux
+#      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Debug    DEPS=FULL  CODECOV=yes
+#    - os: osx
+#      env: COMPILER=clang CMAKE_BUILD_TYPE=Debug    DEPS=FULL
 
 #    - os: linux
 #      env: COMPILER=icc   CMAKE_BUILD_TYPE=Release  DEPS=MINI
     - os: linux
       env: COMPILER=gcc   CMAKE_BUILD_TYPE=Release  DEPS=MINI
-    - os: osx
-      env: COMPILER=clang CMAKE_BUILD_TYPE=Release  DEPS=MINI
+#    - os: osx
+#      env: COMPILER=clang CMAKE_BUILD_TYPE=Release  DEPS=MINI
 
-    - os: linux
-      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Release  DEPS=FULL
+#    - os: linux
+#      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Release  DEPS=FULL
 #    - os: linux
 #      env: COMPILER=icc   CMAKE_BUILD_TYPE=Release  DEPS=FULL
-    - os: osx
-      env: COMPILER=clang CMAKE_BUILD_TYPE=Release  DEPS=FULL
+#    - os: osx
+#      env: COMPILER=clang CMAKE_BUILD_TYPE=Release  DEPS=FULL
 
 before_install:
     # TEMPORARILY disabling tests that did not work at "day zero" (i.e. SF -> github migration)
