Adding builtin function for SCOPE_VARNAME, and a test-script for it.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -196,6 +196,7 @@ TESTS = \
   test_same_name.pro \
   test_save_restore.pro \
   test_scope_varfetch.pro \
+  test_scope_varname.pro \
   test_sem.pro \
   test_simplex.pro \
   test_size.pro \
