Added test-script, also some some sanity-checks in tag_names_fun.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -212,6 +212,7 @@ TESTS = \
   test_structures.pro \
   test_suite.pro \
   test_systime.pro \
+  test_tag_names.pro \
   test_tic_toc.pro \
   test_tiff.pro \
   test_total.pro \
