--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,12 +5,12 @@ branches:
 clone_folder: c:\projects\gdl
 configuration:
   - Release
-  - Debug
+  # - Debug
 environment:
   matrix:
   # #- platform: mingw64810i686
   - platform: mingw64630x8664
-  - platform: mingw64630i686
+  - platform: mingw64810i686
    
 matrix:
   fast_finish: true
