--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,8 @@ environment:
   matrix:
   # #- platform: mingw64810i686
   - platform: mingw64630x8664
-  - platform: mingw64810i686
+  - platform: mingw64720x8664
+  # - platform: mingw64810i686  # Not available
    
 matrix:
   fast_finish: true
@@ -38,19 +39,16 @@ install:
       }
       elseif ($env:platform -Match "mingw64630x8664")
       {
-        #"x86_64-7.3.0-posix-seh-rt_v5-rev0"
         $env:GCC="x86_64-6.3.0-posix-seh-rt_v5-rev1"
         $env:MSYSTEM="MINGW64" ;  $env:mname="mingw64" ; $env:arch="x86_64"
       }
       elseif ($env:platform -Match "mingw64720x8664") 
       {
-        #"x86_64-7.3.0-posix-seh-rt_v5-rev0"
         $env:GCC="x86_64-7.2.0-posix-seh-rt_v5-rev1"
         $env:MSYSTEM="MINGW64" ;  $env:mname="mingw64" ; $env:arch="x86_64"
       }
       elseif ($env:platform -Match "mingw64730x8664") 
       {
-        #"x86_64-7.3.0-posix-seh-rt_v5-rev0"
         $env:GCC="x86_64-7.3.0-posix-seh-rt_v5-rev0"
         $env:MSYSTEM="MINGW64" ; $env:mname="mingw64" ; $env:arch="x86_64"
       }
